--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
     <h1>Hold on, taking you to my new portfolio...</h1>
     <div class="loader"></div>
     <p>Almost there! 🚀</p>
-    <a href="https://personal-perfect.vercel.app/"
+    <a href="https://julianojika.site//"
       >Click here if not redirected</a
     >
 
     <script>
-      window.location.href = "https://personal-perfect.vercel.app/";
+      window.location.href = "https://julianojika.site/";
     </script>
   </body>
 </html>
